# uMario_Vita

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/: FUNDING.yml
FastCMake/: CMakeLists.txt
uNext/: AboutMenu.cpp  CFG.cpp  Core.cpp  FireBall.cpp  Flag.cpp  LoadingMenu.cpp  MainMenu.cpp  Map.cpp  OptionsMenu.cpp  PauseMenu.cpp
